<resources>
    <string name="app_name">计算器</string>
    <string name="txtdel">回退</string>
    <string name="txtcle">清空</string>
    <string name="txtsqu">开方</string>
    <string name="txt0">0</string>
    <string name="txt1">1</string>
    <string name="txt2">2</string>
    <string name="txt3">3</string>
    <string name="txt4">4</string>
    <string name="txt5">5</string>
    <string name="txt6">6</string>
    <string name="txt7">7</string>
    <string name="txt8">8</string>
    <string name="txt9">9</string>    
    <string name="txtadd">+</string>
    <string name="txtsub">-</string>
    <string name="txtmul">*</string>
    <string name="txtdiv">/</string>
    <string name="txtdot">.</string>
    <string name="txteql">=</string>
</resources>
